--- a/index.html
+++ b/index.html
@@ -5,8 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fewd homework</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,500;1,500&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+    <div class="flex top-header">
+        <div class="logo">
+            <h2>Startup Matchmaker</h2>
+        </div>
+        <div>
+            <nav>
+                <a href="#">Find Developers</a>
+                <a href="#">Find Designers</a>
+                <a href="#">How it Works</a>
+                <a href="#">Our Team</a>
+                <a href="#">Blog</a>
+            </nav>
+        </div>
+    </div>
+    <div class="header">
+        <h2>
+            Because two brains <span class="line">taste </span><span class="under">are</span> better than one.
+        </h2>
+    </div>
+    <div class="banner">
+        <div>
+            <h3>Meet Your Match!</h3>
+            <p>Have a great idea for a product, but need help
+                making ita reality? We're here to help. Startup
+                Matchmaker is the best place for designers and
+                developers to find each other.
+            </p>
+            <button>CREATE A PROFILE</button>
+        </div>
+    </div>
+    <div class="pages">
+        <div class="item">
+            <h2>Create a Profile</h2>
+            <p>Are you a designer? Developer? Put yourself out there
+                so that others can join you!
+            </p>
+            <button class="btn-pages">SIGN UP NOW</button>
+        </div>
+
+        <div class="item">
+            <h2>Find a Developer</h2>
+            <p>Looking for a fantastic developer to work with on the next
+                big thing? Look no further.
+            </p>
+            <button class="btn-pages">START YOUR SEARCH</button>
+        </div>
+
+        <div class="item">
+            <h2>Find a Designer</h2>
+            <p>Need someone who can make a product intuitive 
+                and appealing? Get ready.
+            </p>
+            <button class="btn-pages">START YOUR SEARCH</button>
+        </div>
+
+    </div>
+
+    <footer>
+        <p>Copyright 2019 Startup Matchmaker. Made in NY.</p>
+    </footer>
 </body>
 </html>
