--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,500;1,500&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css\style.css" />
 </head>
 <body>
     <div class="flex top-header">
